--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ddmxinfra.github.io/appdl/DDMWallet-v2.1.41-appstore-exchangewallet.ipa</string>
+					<string>https://ddmxinfra.github.io/appdl/DDMWallet-v2.1.65-resignedV2.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -31,7 +31,7 @@
 				<key>bundle-identifier</key>
 				<string>com.ddm.exchangewallet.enterprise1</string>
 				<key>bundle-version</key>
-				<string>2.1.41</string>
+				<string>2.1.65</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
